--- a/peliculas.html
+++ b/peliculas.html
@@ -162,6 +162,7 @@
         <div class="grupo_2">
             <small>&copy; 2022 <b>FPW_Grupo_11</b> - Todos los derechos reservados.</small>
         </div>
+        <!-- Un nuevo comentario-->
     </footer>
 </body>
 </html>
