--- a/peliculas.html
+++ b/peliculas.html
@@ -163,6 +163,7 @@
             <small>&copy; 2022 <b>FPW_Grupo_11</b> - Todos los derechos reservados.</small>
         </div>
         <!-- Un nuevo comentario-->
+        <!-- Un nuevo comentario2-->
     </footer>
 </body>
 </html>
