un nuevo comentario 3

--- a/peliculas.html
+++ b/peliculas.html
@@ -164,6 +164,7 @@
         </div>
         <!-- Un nuevo comentario-->
         <!-- Un nuevo comentario2-->
+        <!-- Un nuevo comentario3-->
     </footer>
 </body>
 </html>
